@@ -1,0 +1,3 @@
+## Process this file with automake to procude Makefile.in
+
+SUBDIRS = C
