@@ -1,3 +1,11 @@
+2002-04-18 - John Fleck <jfleck@inkstain.net>
+
+	* help/Makefile.am, help/C/Makefile.am
+	gnome-system-log.xml, gnome-system-log-C/omf, legal.xml
+	figures/gnome-system-log.png
+	incorporating placeholder docs, completing patch from
+	Satyajit
+
 2002-04-16  Kevin Vandersloot <kfv101@psu.edu>
 
         * Makefile.am, logview.c : get help working - almost
